# Real-Time-Voice-Cloning

./: .deepsource.toml  .gitattributes  .gitignore  1  Dockerfile  INSTALL.md  LICENSE  LICENSE.md  LICENSE.txt  MACOS_INSTALL.md  Merge.md  Paddy  Pipfile  README.md  README_zh-CN.md  Real_Time_Voice_Cloning.ipynb  TODO.md  _README.md  advanced_cli.py  attach_analysis.py  bots.py  demo_cli.py  demo_cli2.py  demo_cli_files.py  demo_toolbox.py  demo_toolbox_collab.ipynb  devcontainer.json  encoder_preprocess.py  encoder_train.py  environment.yml  freescript.py  g2p_train.py  hola  hparams.py  install_requirements_windows.bat  lalala.txt  nni_search.py  pyproject.toml  requirements.txt  requirements_gpu.txt  (+21 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: any-issue.md  bug-report.md  custom.md  something-not-working.md
.github/workflows/: ci.yml
Real-Time-Voice-Cloning/: demo_toolbox.py  encoder_train.py  synthesizer_preprocess_embeds.py
Real-Time-Voice-Cloning/encoder/: inference.py  model.py  params_data.py  params_model.py
Real-Time-Voice-Cloning/synthesizer/: hparams.py  inference.py  preprocess.py  synthesize.py  synthesizer_dataset.py  train.py
Real-Time-Voice-Cloning/toolbox/: __init__.py  ui.py  utterance.py
Real-Time-Voice-Cloning/utils/: logmmse.py  modelutils.py
Real-Time-Voice-Cloning/vocoder/: audio.py  display.py  distribution.py  gen_wavernn.py  inference.py  train.py
SV2TTS/: README.md  audio.py  config.py  debug.py  demo_embeddings.py  demo_sv2tts.py  demo_umap.py  draft.py  encoder_preprocess.py  encoder_train.py  global_config.py  inference.py  inference_demo.py  model.py  params.py  params_data.py  params_model.py  preprocess.py  requirements.txt  synthesizer_preprocess.py  synthesizer_train.py  train.py  umap_demo.py  vocoder_preprocess.py
SV2TTS/data_objects/: speaker.py  speaker_batch.py  speaker_verification_dataset.py  utterance.py
SV2TTS/datasets/: data_loader.py  librispeech.py  preprocess.py  speaker.py  speaker_batch.py  speaker_data.py  speaker_verification_dataset.py  utterance.py
SV2TTS/demos/: umap_demo.py
SV2TTS/encoder/: audio.py  inference.py  model.py  params_data.py  preprocess.py  train.py
SV2TTS/synthesizer/: feeder.py  hparams.py  synthesize.py  synthesizer.py  train.py
SpeechSplit/: .gitignore  LICENSE  README.md  autovc_hparams.py  check_names.py  data_loader.py  demo.ipynb  demo.py  hparams.py  main.py  make_metadata.py  make_spect_f0.py  model.py  solver.py  test.py  utils.py
autovc/: README.md  conversion.ipynb  data_loader.py  hparams.py  main.py  make_meta_spect.py  make_metadata.py  make_spect.py  model_bl.py  model_vc.py  solver_encoder.py  synthesis.py  utils.py  vocoder.ipynb
demo_output/: B_voice_A_text.flac  original_speech_A.flac  original_speech_B.flac  text_reference_A.flac  voice_reference_B.flac
documents/: references.bib  subject.tex  subject_formal.tex  summary.tex  thesis.bbl  thesis.blg  thesis.run.xml  thesis.tex
encoder/: __init__.py  audio.py  config.py  download.py  inference.py  inference_demo.py  model.py  params_data.py  params_model.py  preprocess.py  profiler.py  template.py  train.py  umap_demo.py  visualizations.py
notes/: datasets.txt  demo.txt  improvements.txt  papers.txt  problems.txt  questions.txt  speaker_encoder.txt  stickynotes.txt  subjects.txt  synthesizer.txt  vocoder.txt
samples/: README.md  VCTK.txt
speech2text/: package-lock.json  package.json
sv2tts/: LICENSE.txt  README.md  demo_embeddings.py  demo_sv2tts.py  demo_toolbox.py  demo_vocoder.py  encoder_preprocess.py  encoder_train.py  requirements.txt  synthesizer_preprocess.py  synthesizer_preprocess_audio.py  synthesizer_preprocess_data.py  synthesizer_preprocess_embeds.py  synthesizer_train.py  vocoder_preprocess.py  vocoder_train.py
synthesizer/: LICENSE.txt  audio.py  audio_preprocessing.py  feeder.py  hparams.py  inference.py  layers.py  loss.py  optimizer.py  preprocess.py  stft.py  synthesize.py  synthesizer.py  synthesizer_dataset.py  tacotron.py  tacotron2.py  train.py  train_nat.py  train_tacotron2.py
synthesizer_pt/: audio.py  feeder.py  hparams.py  inference.py  preprocess.py  synthesizer_dataset.py  train.py
tacotron2/: LICENSE  LICENSE.txt  README.md  griffin_lim_synthesis_tool.py  hparams.py  inference_demo.py  infolog.py  preprocess.py  prune_train_txt.py  requirements.txt  sentences.txt  sentences_old.txt  synthesize.py  temp.py  test_wavenet_feeder.py  train.py  wavenet_preprocess.py
test/: README.md  audio.py  requirements.txt  speech2speech_ff.py  speech2speech_fv.py  speech2speech_vv.py
tests/: test_ci_smoke.py
toolbox/: __init__.py  audio.py  browser.py  projection.py  streamlit_ui.py  textgen.py  ui.py  ui_orig.py  viz.py
toolbox_pt/: __init__.py  ui.py
utils/: argutils.py  default_models.py  generate_plot.py  logmmse.py  modelutils.py  profiler.py
vocoder/: audio.py  display.py  distribution.py  gen_wavernn.py  hparams.py  inference.py  train.py  vocoder_dataset.py
wave-rnn/: LICENSE.txt  inference_demo.py  params.py  preprocess.py  pruning.py  train.py
(+221 files in other folders)
