[project]
name = "real-time-voice-cloning"
version = "0.0.0"
requires-python = ">=3.10,<3.11"

# Dependencies will be populated by `uv add -r requirements.txt`.
dependencies = [
  "inflect==5.3.0",
  "librosa==0.9.2",
  "matplotlib==3.5.1",
  "numpy>=1.26,<2",
  "Pillow==8.4.0",
  "PyQt5>=5.15.6,<5.16",
  "scikit-learn==1.0.2",
  "scipy>=1.7",
  "setuptools<=80.8.0",
  "sounddevice==0.4.3",
  "soundfile==0.10.3.post1",
  "tqdm==4.62.3",
  "umap-learn==0.5.2",
  "Unidecode==1.3.2",
  "urllib3==1.26.7",
  "visdom==0.1.8.9",
  "webrtcvad==2.0.10",
]

[project.optional-dependencies]
# CPU-only torch (default in CI)
# For macOS ARM64, use PyTorch 1.13+ which supports Python 3.10
cpu   = ["torch==1.10.*; sys_platform != 'darwin'", "torch>=1.13,<1.14; sys_platform == 'darwin'"]
cuda = ["torch==1.10.*"]

[dependency-groups]
# Dev/test dependencies
dev = ["pytest"]

# Map extras -> PyTorch wheel indexes so uv knows where to fetch torch
# On macOS, always use CPU wheels (CUDA not available)
[tool.uv.sources]
torch = [
  { index = "pytorch-cpu",   extra = "cpu" },
  { index = "pytorch-cpu",   marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cuda", extra = "cuda", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu113"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# Constrain lock resolution to platforms we actually support to avoid
# selecting wheels that don't exist on Windows during local sync.
[tool.uv]
# Use PEP 508 markers for environments we support; allows a lock usable on Windows, Linux, and macOS.
required-environments = [
  "sys_platform == 'win32'",
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
  "sys_platform == 'darwin'",
]
conflicts = [[{ extra = "cpu" }, { extra = "cuda" }]]
